--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@
 !/log/.keep
 !/tmp/.keep
 
+/node_modules
+/config/db/schema.rb
+/Gemfile.lock
 # Ignore pidfiles, but keep the directory.
 /tmp/pids/*
 !/tmp/pids/
