--- a/config/cable.yml
+++ b/config/cable.yml
@@ -7,4 +7,5 @@ test:
 production:
   adapter: redis
   url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  all_channels: queueproject_production
   channel_prefix: queueproject_production
