--- a/config/cable.yml
+++ b/config/cable.yml
@@ -9,4 +9,4 @@ production:
   adapter: redis
   url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
   all_channels: queueproject_production
-  channel_prefix: queue_managment_channel
+  channel_prefix: QueueManagmentChannel
