--- a/config/cable.yml
+++ b/config/cable.yml
@@ -2,11 +2,11 @@ development:
   adapter: redis
   url: redis://localhost:6379/1
 
+  
 test:
   adapter: test
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  all_channels: queueproject_production
-  channel_prefix: QueueManagmentChannel
+  url: redis://localhost:6379/1
+  channel_prefix: Queueproject
