--- a/config/cable.yml
+++ b/config/cable.yml
@@ -9,4 +9,4 @@ test:
 production:
   adapter: redis
   url: redis://localhost:6379/1
-  channel_prefix: Queueproject
+  channel_prefix: QueueManagmentChannel
